--- a/updateProduct.html
+++ b/updateProduct.html
@@ -65,7 +65,7 @@
 
             <form id="form" action="consumer.html" method="post" enctype="multipart/form-data">
                 <div>
-                    <h3 id="produs"></h3>
+                    <h3 id="nume"></h3>
 
                 </div>
 
