--- a/order.html
+++ b/order.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
     <script src="./order.js" defer></script>
     <script src="./logout.js" defer></script>
-
     <link rel="stylesheet" href="./order.css">
     <title>Order</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -61,7 +60,7 @@
     </header>
 
 
-    <main>
+    <main id="main">
 
 
 
